[PF-697] Move bigquery to wrap generated google API (#79)
* first steps at replacing underlying lib

* update version, fix tests

* remove unecessary status check

* review comments

* remove more unused test dependencies